--- a/01_intro_to_r/intro_to_r.Rmd
+++ b/01_intro_to_r/intro_to_r.Rmd
@@ -17,11 +17,11 @@ library(openintro)
 
 ## Logistics
 
-This lab will occur remotely and in pairs (there may be one team of three people). For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to random breakout rooms. I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
+This lab will occur remotely and in teams of three. For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to random breakout rooms. I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
 
 For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
 
-Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, one of you can be the main recorder of answers in the lab document. It may be helpful to share your screen. You will be working with this same partner/group for the next lab, so you will switch roles next week. 
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To be clear, everyone submits files to Moodle, but the files can be the same within a group. Today one of you should be the main recorder of answers in the lab document. You will share this document with your teammates. As you work it may be helpful to share your screen. You will be working with this same group for the next lab, so you will switch roles next week. 
 
 You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.
 
@@ -56,6 +56,16 @@ The panel in the upper right contains your *environment* as well as a history of
 Any plots that you generate will show up in the panel in the lower right corner. 
 This is also where you can browse your files, access help, manage packages, etc.
 
+### Uploading Files to the Server
+
+To import files to the R Server click the "Upload" button in the bottom right panel. From there navigate to where the file is saved on your personal computer. 
+
+1. Import the "intro_to_r.Rmd" file to the server.
+
+```{r upload, echo=FALSE, results="asis"}
+knitr::include_graphics("img/import.png") 
+```
+
 ### R Packages
 
 R is an open-source programming language, meaning that users can contribute packages that make our lives easier, and we can use them for free. 
@@ -64,25 +74,14 @@ For this lab, and many others in the future, we will use the following R package
 - The suite of **tidyverse** packages: for data wrangling and data visualization
 - **openintro**: for data and custom functions with the OpenIntro resources
 
-If these packages are not already available in your R environment, install them by typing the following three lines of code into the console of your RStudio session, pressing the enter/return key after each one. 
-Note that you can check to see which packages (and which versions) are installed by inspecting the *Packages* tab in the lower right panel of RStudio. 
-
-These packages will be installed on the server, but later on when you install R and RStudio on your own computer, you will need to install them yourself. You may need to select a server from which to download; any of them will work.
-
-```{r install-packages, message=FALSE, eval=FALSE}
-install.packages("tidyverse")
-install.packages("openintro")
-```
-
-Next, you need to load these packages in your working environment. 
-We do this with the `library` function. Run the following three lines in your console.
+These packages are already installed on the R Server, but you need to load these packages in your working environment. We do this with the `library` function. Run the following three lines in your console (bottom left panel).
 
 ```{r load-packages, message=FALSE}
 library(tidyverse)
 library(openintro)
 ```
 
-You only need to *install* packages once, but you need to *load* them each time you relaunch RStudio. 
+You only need to *install* packages once, but you need to *load* them using `library` each time you relaunch RStudio. 
 
 The Tidyverse packages share common philosophies and are designed to work together. 
 You can find more about the packages in the tidyverse at [tidyverse.org](http://tidyverse.org/).
@@ -90,7 +89,7 @@ You can find more about the packages in the tidyverse at [tidyverse.org](http://
 
 ### Creating a reproducible lab report
 
-We will be using R Markdown to create reproducible lab reports. See the following videos describing why and how. Note they will refer to the `oilabs` package. This has been renamed the `openintro` packge.
+We will be using R Markdown to create reproducible lab reports. See the following videos describing why and how. Note they will refer to the `oilabs` package. This has been renamed the `openintro` package.
 
 [**Why use R Markdown for Lab Reports?**](https://youtu.be/lNWVQ2oxNho)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lNWVQ2oxNho" frameborder="0" allowfullscreen></iframe>
@@ -98,7 +97,15 @@ We will be using R Markdown to create reproducible lab reports. See the followin
 [**Using R Markdown for Lab Reports in RStudio**](https://youtu.be/o0h-eVABe9M)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/o0h-eVABe9M" frameborder="0" allowfullscreen></iframe>
 
-In a nutshell, in RStudio, go to New File -> R Markdown... Then, choose From Template and then choose `Lab Report for OpenIntro Statistics Lab 1` from the list of templates.
+1. In RStudio, go to New File -> R Markdown... Then, choose From Template and then choose `Lab Report {openintro}` from the list of templates.
+
+```{r fileNew, echo=FALSE, results="asis"}
+knitr::include_graphics("img/fileNew.png") 
+```
+
+```{r template, echo=FALSE, results="asis"}
+knitr::include_graphics("img/template.png") 
+```
 
 Going forward you should refrain from typing your code directly in the console, and instead type any code (final correct answer, or anything you're just trying out) in the R Markdown file and run the chunk using either the Run button on the chunk  (green sideways triangle) or by highlighting the code and clicking Run on the top  right corner of the R Markdown editor. 
 If at any point you need to start over, you  can Run All Chunks above the chunk you're working in by clicking on the down arrow in the code chunk.
@@ -165,232 +172,58 @@ We can see that there are 82 observations and 3 variables in this dataset. The v
 At this point, you might notice that many of the commands in R look a  lot like functions from math class; that is, invoking R commands means supplying a function with some number of arguments.
 The `glimpse` command, for example, took a single argument, the name of a data frame. 
 
-## Some Exploration
+1. Put `glimpse(arbuthnot)` where you see "# Insert code for Exercise 1 here" in you lab report.
 
-Let's start to examine the data a little more closely. We can access the data in
-a single column of a data frame separately using a command like
+1. When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output. If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
 
-```{r view-boys}
-arbuthnot$boys
+## Exporting Files From the Server
+
+To export files from the R server to your personal computer so that you can turn in the files on Moodle, put a check mark by the file names that you want to download (in the bottom right panel). Click the "More" button and then choose "Export". This will cause a zip file to be dowloaded to your computer. You can unzip this folder (double click on it) to retrieve your documents. 
+
+1. Export both your lab1.Rmd and lab1.html files.
+
+```{r export, echo=FALSE, results="asis"}
+knitr::include_graphics("img/export.png") 
 ```
 
-This command will only show the number of boys baptized each year. 
-The dollar sign basically says "go to the data frame that comes before me, and find the variable that comes after me".
+When you are finished on the server, always exit your session before closing the browser. 
 
-1. What command would you use to extract just the counts of girls baptized? Try
-   it!
-    
-Notice that the way R has printed these data is different. When we looked at the complete data frame, we saw 82 rows, one on each line of the display. 
-These data are no longer structured in a table with other variables, so they are displayed  one right after another. 
-Objects that print out in this way are called *vectors*; they represent a set of numbers. 
-R has added numbers in [brackets] along the left side of the printout to indicate locations within the vector. For example, 5218  follows `[1]`, indicating that `5218` is the first entry in the vector. 
-And if `[43]` starts a line, then that would mean the first number on that line would represent the 43rd entry in the vector.
+1. Exit your server session by clicking on the orange button at the top right.
 
-
-### Data visualization
-
-R has some powerful functions for making graphics. We can create a simple plot of the number of girls baptized per year with the command
-
-```{r plot-girls-vs-year}
-ggplot(data = arbuthnot, aes(x = year, y = girls)) + 
-  geom_point()
+```{r exit, echo=FALSE, results="asis"}
+knitr::include_graphics("img/exit.png") 
 ```
 
+## Dowloading R and RStudio on your own computer
 
-We use the `ggplot()` function to build plots. 
-If you run the plotting code in your console, you should see the plot appear under the *Plots* tab of the lower right panel of RStudio. If you run the chunk, the plot will appear beneath the code chunk.
-Notice that the command above again looks like a function, this time with arguments separated by commas. 
+The RStudio Server requries an internet connection and is constrained by how many Smithies are using it at any given time. It can be helpful to have a version of R and RStudio that are local to your device.
 
-With `ggplot()`:
+1. Download R [here](https://cran.r-project.org/mirrors.html). Choose the CRAN mirror site that is closest to you. In the box labeled "Download and Install R," click the link corresponding to your operating system.
 
-- The first argument is always the dataset. 
-- Next, you provide the variables from the dataset to be assigned to `aes`thetic elements of the plot, e.g. the x and the y axes. 
-- Finally, you use another layer, separated by a `+` to specify the `geom`etric object for the plot. Since we want to scatterplot, we use `geom_point()`.
+1. Download RStudio by clicking on the "Download" button under the free version of RStudio Desktop [here](https://rstudio.com/products/rstudio/download/). Check that the recommended version matches your operating system and click the "Download RStudio for..." button.
 
-For instance, if you wanted to visualize the above plot using a line graph, you would replace `geom_point()` with `geom_line()`.
+1. Check that it worked by launching RStudio. You should see a window that looks like the image shown below.
 
-```{r plot-girls-vs-year-line}
-ggplot(data = arbuthnot, aes(x = year, y = girls)) + 
-  geom_line()
+```{r r-interface-2020, echo=FALSE, results="asis"}
+knitr::include_graphics("img/r-interface-2020.png")
 ```
 
-You might wonder how you are supposed to know the syntax for the `ggplot` function. 
-Thankfully, R documents all of its functions extensively. 
-To learn what a function does and its arguments that are available to you, just type in a question mark followed by the name of the function that you're interested in. 
-Try the following in your console:
+Call me into your breakout room if you are having trouble with this process. 
 
-```{r plot-help, tidy = FALSE}
-?ggplot
+Note: These download instructions are adapted from [this blog post](https://towardsdatascience.com/how-to-install-r-and-rstudio-584eeefb1a41).
+
+## Installing Packages
+
+We need to install packages so they are available in your R environment. 
+
+1. Install the `tidyverse` and `openintro` packages by typing the following two lines of code into the console of your RStudio session, pressing the enter/return key after each one. You may need to select a server from which to download; any of them will work.
+
+```{r install-packages, message=FALSE, eval=FALSE}
+install.packages("tidyverse")
+install.packages("openintro")
 ```
 
-Notice that the help file replaces the plot in the lower right panel. You can toggle between plots and help files using the tabs at the top of that panel. 
-
-```{r horst-ggplot, echo=FALSE, results="asis", out.width = "50%"}
-knitr::include_graphics("img/ggplot2_masterpiece.png") 
-```
-[Artwork](https://github.com/allisonhorst/stats-illustrations/) by @allison_horst
-
-1. Is there an apparent trend in the number of girls baptized over the years? 
-   How would you describe it? (To ensure that your lab report is comprehensive,
-   be sure to include the code needed to make the plot as well as your written
-   interpretation.)
-
-### R as a big calculator
-
-Now, suppose we want to plot the total number of baptisms. 
-To compute this, we could use the fact that R is really just a big calculator. 
-We can type in mathematical expressions like
-
-```{r calc-total-bapt-numbers}
-5218 + 4683
-```
-
-to see the total number of baptisms in 1629. We could repeat this once for each year, but there is a faster way. 
-If we add the vector for baptisms for boys to that of girls, R will compute all sums simultaneously.
-
-```{r calc-total-bapt-vars}
-arbuthnot$boys + arbuthnot$girls
-```
-
-What you will see are 82 numbers (in that packed display, because we aren’t looking at a data frame here), each one representing the sum we’re after. 
-Take a look at a few of them and verify that they are right.
-
-### Adding a new variable to the data frame
-
-We'll be using this new vector to generate some plots, so we'll want to save it as a permanent column in our data frame.
-
-```{r calc-total-bapt-vars-save}
-arbuthnot <- arbuthnot %>%
-  mutate(total = boys + girls)
-```
-
-The `%>%` operator is called the **piping** operator. It takes the output of the previous expression and pipes it into the first argument of the function in the following one. 
-To continue our analogy with mathematical functions, `x %>% f(y)` is equivalent to `f(x, y)`.
-
-<div id="boxedtext">
-**A note on piping: ** Note that we can read these two lines of code as the following: 
-
-*"Take the `arbuthnot` dataset and **pipe** it into the `mutate` function. 
-Mutate the `arbuthnot` data set by creating a new variable called `total` that is the sum of the variables called `boys` and `girls`. 
-
-Then assign the resulting dataset to the object called `arbuthnot`, i.e. overwrite the old `arbuthnot` dataset with the new one containing the new variable."*
-
-This is equivalent to going through each row and adding up the `boys` and `girls` counts for that year and recording that value in a new column called `total`.
-</div>
-
-
-
-<div id="boxedtext">
-**Where is the new variable? ** When you make changes to variables in your dataset, click on the name of the dataset again to update it in the data viewer.
-</div>
-
-You'll see that there is now a new column called `total` that has been tacked onto the data frame.
-
-```{r horst-mutate, echo=FALSE, results="asis", out.width = "50%"}
-knitr::include_graphics("img/dplyr_mutate.png") 
-```
-[Artwork](https://github.com/allisonhorst/stats-illustrations/) by @allison_horst
-
-The special symbol `<-` performs an *assignment*, taking the output of one line of code and saving it into an object in your environment. 
-In this case, you already have an object called `arbuthnot`, so this command updates that data set with the new mutated column.
-
-You can make a line plot of the total number of baptisms per year with the command
-
-```{r plot-total-vs-year}
-ggplot(data = arbuthnot, aes(x = year, y = total)) + 
-  geom_line()
-```
-
-Just as you computed the total number of births, you can compute the ratio of the number of boys to the number of girls baptized in 1629 with
-
-```{r calc-prop-boys-to-girls-numbers}
-5218 / 4683
-```
-
-or you can act on the complete columns with the expression
-
-```{r calc-prop-boys-to-girls-vars}
-arbuthnot <- arbuthnot %>%
-  mutate(boy_to_girl_ratio = boys / girls)
-```
-
-You can also compute the proportion of newborns that are boys in 1629
-
-```{r calc-prop-boys-numbers}
-5218 / (5218 + 4683)
-```
-
-or you can compute this for all years simultaneously and append it to the dataset
-
-```{r calc-prop-boys-vars}
-arbuthnot <- arbuthnot %>%
-  mutate(boy_ratio = boys / total)
-```
-
-Note that we are using the new `total` variable we created earlier in our calculations.
-
-3. Now, generate a plot of the proportion of boys born over time. What do you see? 
-
-<div id="boxedtext">
-**Tip: ** If you use the up and down arrow keys, you can scroll through your previous commands, your so-called command history. 
-You can also access it by clicking on the history tab in the upper right panel. 
-This will save you a lot of typing in the future.
-</div>
-
-Finally, in addition to simple mathematical operators like subtraction and division, you can ask R to make comparisons like greater than, `>`, less than, `<`, and equality, `==`. 
-For example, we can ask if the number of births of boys outnumber that of girls in each year with the expression
-
-```{r boys-more-than-girls}
-arbuthnot <- arbuthnot %>%
-  mutate(more_boys = boys > girls)
-```
-
-This command adds a new variable to the `arbuthnot` dataframe containing the values of either `TRUE` if that year had more boys than girls, or `FALSE` if that year did not (the answer may surprise you). 
-This variable contains a different kind of data than we have encountered so far. 
-All other columns in the `arbuthnot` data frame have values that are numerical (the year, the number of boys and girls). 
-Here, we've asked R to create *logical* data, data where the values are either `TRUE` or `FALSE`. 
-In general, data analysis will involve many different kinds of data types, and one reason for using R is that it is able to represent and compute with many of them.
-
-## More Practice
-
-In the previous few pages, you recreated some of the displays and preliminary analysis of Arbuthnot's baptism data. 
-Your assignment involves repeating these steps, but for present day birth records in the United States. 
-The data are stored in a data frame called `present`.
-
-To find the minimum and maximum values of columns, you can use the functions `min` and `max` within a `summarise()` call, which you will learn more about in the following lab. 
-Here's an example of how to find the minimum and maximum amount of boy births in a year:
-
-```{r summarize min and max}
-arbuthnot %>%
-  summarise(min = min(boys), max = max(boys))
-```
-
-1.  What years are included in this data set? What are the dimensions of the 
-    data frame? What are the variable (column) names?
-
-1.  How do these counts compare to Arbuthnot's? Are they of a similar magnitude?
-
-1.  Make a plot that displays the proportion of boys born over time. What do you see? 
-    Does Arbuthnot's observation about boys being born in greater proportion than girls 
-    hold up in the U.S.? Include the plot in your response. *Hint:* You should be
-    able to reuse your code from Exercise 3 above, just replace the dataframe name.
-
-1.  In what year did we see the most total number of births in the U.S.? *Hint:*
-    First calculate the totals and save it as a new variable. Then, sort your
-    dataset in descending order based on the total column. You can do this
-    interactively in the data viewer by clicking on the arrows next to the 
-    variable names. To include the sorted result in your report you will need 
-    to use two new functions: `arrange` (for sorting). We can arrange the data 
-    in a descending order with another function: `desc` (for descending order).
-    The sample code is provided below.
-    
-```{r sample-arrange, eval=FALSE}
-present %>%
-  arrange(desc(total))
-```
-
-These data come from reports by the Centers for Disease Control. 
-You can learn more about them by bringing up the help file using the command `?present`.
+Note that you can check to see which packages (and which versions) are installed by inspecting the *Packages* tab in the lower right panel of RStudio. 
 
 ## Resources for learning R and working in RStudio
 
@@ -409,36 +242,17 @@ These cheatsheets may come in handy throughout the semester:
 Note that some of the code on these cheatsheets may be too advanced for this course.
 However the majority of it will become useful throughout the semester.
 
-## Dowloading R and RStudio on your own computer
-
-The RStudio Server requries an internet connection and is constrained by how many Smithies are using it at any given time. It can be helpful to have a version of R and RStudio that are local to your device.
-
-1. Download R [here](https://cran.r-project.org/mirrors.html). Choose the CRAN mirror site that is closest to you. In the box labeled "Download and Install R," click the link corresponding to your operating system.
-
-1. Download RStudio by clicking on the "Download" button under the free version of RStudio Desktop [here](https://rstudio.com/products/rstudio/download/). Check that the recommended version matches your operating system and click the "Download RStudio for..." button.
-
-1. Check that it worked by launching RStudio. You should see a window that looks like the image shown below.
-
-```{r r-interface-2020, echo=FALSE, results="asis"}
-knitr::include_graphics("img/r-interface-2020.png")
-```
-
-Call me into your breakout room if you are having trouble with this process. Note at the end of your lab report whether or not you both were able to successfully download R and RStudio locally.
-
-
-Note: These download instructions are adapted from [this blog post](https://towardsdatascience.com/how-to-install-r-and-rstudio-584eeefb1a41).
-
 ## Deliverables
-
-When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output. If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
 
 Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
 
-LastName-LastName-L-01.Rmd  (add a third last name if applicable)
+LastName-LastName-LastName-L-01.Rmd  
 
-LastName-LastName-L-01.html
+LastName-LastName-LastName-L-01.html
 
-*Due*: Monday, September 7th (beginning of class time Eastern time)
+Confirm that you are able to get through all 10 exercises (as a note on your Moodle submission).
+
+*Due*: Monday,  (beginning of class time Eastern time)
 
 * * *
 
